# data-triad

./: .gitignore  Dockerfile  README.md  alembic.ini  app_data.db  credit_card_default.csv  credit_default_model.ipynb  credit_default_prediction_model_report.pptx  data_pipeline.py  pyproject.toml  requirements.txt  test.py  test2.py
alembic/: env.py
alembic/versions/: 0b68d2b86f15_.py  36f905d910c2_automigration.py  39b1f61c695e_.py  423d1288dd13_.py  7a1ad30edf24_.py  8bdc275622c9_.py  9087989c4d45_.py  b2c075a1ef9f_automigration.py  c98573788756_.py  d0c1c2c01793_.py  f3c1cce0c388_.py  f5a7878b1e83_automigration.py  f74882dc9a94_.py  fd668366a00f_automigration.py
app/: main.py
app/api/endpoints/: prediction_requests.py
app/database/: crud.py  models.py  session.py
bq_fetch/: credit_default_model.ipynb  data_pipeline.py  pyproject.toml
models/: catgb_model.pkl  lgb_model.pkl  xgb_model.pkl  xgb_over_model.pkl
