[tool.poetry]
name = "bq-classification"
version = "0.1.0"
description = "Practice project for getting data from bigquery and creating classificaiton ML model: predicting credit card default."
authors = ["Andrew Ogega <'ogegaandrew@gmail.com'>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
seaborn = "^0.13.2"
matplotlib = "^3.10.3"
pydantic-settings = "^2.9.1"
google = "^3.0.0"
google-auth = "^2.40.2"
google-cloud-bigquery = "^3.34.0"
db-dtypes = "^1.4.3"
google-cloud-bigquery-storage = "^2.32.0"
xgboost = "^3.0.2"
imblearn = "^0.0"
catboost = "^1.2.8"
lightgbm = "^4.6.0"
mlflow = "^2.22.1"
poetry-plugin-export = "^1.9.0"


[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^25.1.0"}
isort = "^6.0.1"
pylint = "^3.3.7"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
